old/lab2/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myvault
  annotations:
#    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: myvault.mycompany.io
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
  tls:
  - hosts:
#    - vault.127.0.0.1.xip.io
#    secretName: vault-tls
